Fix automatic dark mode

--- a/src/theme/css/variables.css
+++ b/src/theme/css/variables.css
@@ -258,7 +258,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    .light.no-js {
+    html:has(.no-js) {
         --bg: hsl(200, 7%, 8%);
         --fg: #98a3ad;
 
@@ -298,6 +298,8 @@
         --searchresults-border-color: #98a3ad;
         --searchresults-li-bg: #2b2b2f;
         --search-mark-bg: #355c7d;
+
+        --color-scheme: dark;
 
         /* Same as `--icons` */
         --copy-button-filter: invert(26%) sepia(8%) saturate(575%) hue-rotate(169deg) brightness(87%) contrast(82%);
